--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Nisha Arora
 logo: NA_circle.png
-description: Elected Board Member: Town of Greenwich, CT
-#show_downloads: false
+description: Elected Board Member Town of Greenwich, CT
+# show_downloads: false
 theme: jekyll-theme-minimal
