--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ logo: NA_circle.png
 description: Elected Board Member, Town of Greenwich, CT
 # show_downloads: false
 theme: jekyll-theme-minimal
+github:
+  is_project_page: false
